<resources>
    <string name="app_name">Lab5</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="telemedicine">Telemedicine</string>
    <string name="welcome">Welcome</string>
    <string name="random_trash">Lorem ipsum dolor sit amet, conse ctetur adipiscing elit, t. Ut enim ad veni am, quis nostrud exercitation ullamco </string>
    <string name="urgent">URGENT</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="your_full_name">Your Full Name</string>
    <string name="birthday">Birthday</string>
    <string name="date_format">dd/mm/yy</string>
    <string name="your_email">Your Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="your_phone_number">Your Phone Number</string>
    <string name="address">Location/Address</string>
    <string name="your_location">Your Location</string>
    <string name="next">Next</string>
    <string name="notification">Notification</string>
    <string name="username">Username</string>
    <string name="request_approved">Your Request Has Been Approved</string>
    <string name="request_details">Request Details</string>
    <string name="name">Name</string>
    <string name="patient_name">Jojon Suehndra</string>
    <string name="disease">Disease</string>
    <string name="sore_eyes">Sore Eyes</string>
    <string name="description">Description</string>
    <string name="random_trash2">Aku ingin menjadi setitik awan kecildi langint bersama mentari yaga hah</string>
    <string name="doctor">Doctor</string>
    <string name="specialty">Specialty</string>
    <string name="rating">4.0</string>
    <string name="confirm_order">Confirm</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="very_urgent">Very Urgent</string>
    <string name="location">Location</string>
    <string name="description_optional">Description ( Optional)</string>
    <string name="request">Request</string>
    <string name="your_disease">Your Disease</string>
    <string name="describe_here">Describe Here</string>
    <string name="doctor_details">Doctor Details</string>
    <string name="short_description">Short Description</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
