<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false">
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusableInTouchMode="true"
    tools:context="com.example.user.lab5.RequestFragment">

    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_hollow_green"
        android:text="@string/very_urgent"
        android:textColor="@color/Lime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/nunito"
        android:text="@string/name"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/nameField"
        app:layout_constraintStart_toStartOf="@+id/nameField" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/nunito"
        android:text="@string/disease"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/nameField"
        app:layout_constraintTop_toBottomOf="@+id/nameField" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/nunito"
        android:text="@string/location"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/diseaseField"
        app:layout_constraintTop_toBottomOf="@+id/diseaseField" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/nunito"
        android:text="@string/description_optional"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/locationField"
        app:layout_constraintTop_toBottomOf="@+id/locationField" />

    <EditText
        android:id="@+id/nameField"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="90dp"
        android:background="@drawable/text_input_name"
        android:ems="10"
        android:hint="@string/your_full_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <EditText
        android:id="@+id/diseaseField"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/text_input_name"
        android:ems="10"
        android:hint="@string/your_disease"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/textView21"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <EditText
        android:id="@+id/locationField"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/text_input_name"
        android:ems="10"
        android:hint="@string/your_location"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/textView22"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <EditText
        android:id="@+id/descriptionField"
        android:ellipsize="start"
        android:layout_width="290dp"
        android:layout_height="92dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/text_input_name"
        android:ems="10"
        android:hint="@string/describe_here"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="@+id/textView23"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <Button
        android:id="@+id/requestBtn"
        android:layout_width="290dp"
        android:layout_height="39dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_green"
        android:text="@string/request"
        android:textColor="@color/White"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionField" />

</android.support.constraint.ConstraintLayout>
</ScrollView>