<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.example.user.lab5.RoundedImageView
        android:id="@+id/photoView"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/add_photo_img" />

    <TextView
        android:id="@+id/nameBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/name"
        android:textColor="#37474e"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/photoView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/specialtyBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/specialty"
        android:textColor="@color/Lime"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/nameBox"
        app:layout_constraintTop_toBottomOf="@+id/nameBox" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:isIndicator="true"
        style="@style/customRatingBar"
        android:rating="4.0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@+id/specialtyBox"
        app:layout_constraintTop_toBottomOf="@+id/specialtyBox" />

    <TextView
        android:id="@+id/ratingScoreBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/rating"
        app:layout_constraintStart_toEndOf="@+id/ratingBar"
        app:layout_constraintTop_toTopOf="@+id/ratingBar" />

</android.support.constraint.ConstraintLayout>